--- a/package.json
+++ b/package.json
@@ -3,5 +3,13 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "hardhat": "^2.19.4"
+  },
+  "dependencies": {
+    "@chainlink/contracts": "^0.6.1",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@openzeppelin/contracts": "^5.0.1",
+    "ethers": "^5.6.1",
+    "hardhat": "^2.13.1",
+    "solhint": "^3.4.1"
   }
 }
