--- a/package.json
+++ b/package.json
@@ -5,11 +5,6 @@
     "hardhat": "^2.19.4"
   },
   "dependencies": {
-    "@chainlink/contracts": "^0.6.1",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@openzeppelin/contracts": "^5.0.1",
-    "ethers": "^5.6.1",
-    "hardhat": "^2.13.1",
-    "solhint": "^3.4.1"
+    "@openzeppelin/contracts": "^5.0.1"
   }
 }
